--- a/css/style.css
+++ b/css/style.css
@@ -6481,11 +6481,15 @@ hr.white {
 .swiper-pagination {
   position: relative !important;  
   bottom: auto !important;       
-  left: 55px !important;          
+  left: 0px !important;          
   margin-top: 25px;
   margin-bottom: 20px;        
   width: auto;          
-  max-width: 530px;          
+  white-space: nowrap !important;
+  box-sizing: border-box;
+  /* padding: 0 8px;        */
+  padding-left: 60px;
+  max-width: 590px;
 }
 
 /* Адаптив пагинации */
@@ -6511,7 +6515,6 @@ hr.white {
 @media (max-width: 720px) {
   .swiper-pagination {
     max-width: 74vw; 
-    left:55px !important;
   }
 }
 
@@ -6630,8 +6633,18 @@ hr.white {
   align-self: start; 
 }
 
+.swiper-pagination .swiper-pagination-bullets {
+  display: flex !important;
+  align-items: center;
+  gap: 0 !important;                  
+  transition: transform 320ms cubic-bezier(.2,.9,.2,1);
+  will-change: transform;
+  transform: translateX(0);
+}
 
 .swiper-pagination-bullet {
+  display: inline-block !important;
+  flex: 0 0 auto !important;
   width: 14px !important;
   height: 14px !important;
   margin: 0 7px !important;
@@ -7156,10 +7169,6 @@ p.product-item-price {
   padding: 0; 
 }
 
-.swiper-controls {
-  position: relative; 
-}
-
 .swiper-button-prev-item::after,
 .swiper-button-next-item::after {
   content: none !important;
@@ -7178,6 +7187,43 @@ p.product-item-price {
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.swiper-controls::before {
+  content: "";
+  position: absolute;
+  left: 40px;
+  top: 0;
+  bottom: 0;
+  width: 20px;
+  background: #faf8f5;
+  z-index: 100;
+}
+
+/* Правая белая полоса */
+.swiper-controls::after {
+  content: "";
+  position: absolute;
+  right: 40px;
+  top: 0;
+  bottom: 0;
+  width: 20px;
+  background: #faf8f5;
+  z-index: 10;
+}
+
+@media (max-width: 1030px) {
+  .swiper-controls::after {
+    right: 20px;
+  }
+
+  .swiper-controls::before {
+    left: 25px;
+  }
+
+  .swiper-pagination {
+    padding-left: 40px;
+  }
 }
 
 .swiper-button-prev-item,
@@ -7227,6 +7273,7 @@ p.product-item-price {
   border-radius: 50%;
   background: #CFA567;
   box-sizing: border-box;
+  
 }
 
 .swiper-controls .swiper-button-prev-item.disabled,
@@ -7246,6 +7293,7 @@ p.product-item-price {
   pointer-events: none; 
   opacity: 0.95;
 }
+
 
 
 
@@ -11924,3 +11972,6 @@ p.cart-item-remove-banner-text {
 #app {
   display: none;
 }
+
+
+
